5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4148/executions/1585_2905.log
== TEST (2019-03-28 11:20:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
var1 = float(input("comprimento do lado a: "))
var2 = float(input("comprimento do lado b: "))
var3 = float(input("comprimento do lado c: "))
s = (a+b+c)/2
a = sqrt(s(s-a(s-b(s-c))))
print(s)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    s = (a+b+c)/2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:20:59) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
a1 = float(input("comprimento do lado a: "))
b = float(input("comprimento do lado b: "))
c = float(input("comprimento do lado c: "))
s = (a+b+c)/2
a = sqrt(s(s-a(s-b(s-c))))
print(s)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    s = (a+b+c)/2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:21:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
a1 = float(input("comprimento do lado a: "))
b = float(input("comprimento do lado b: "))
c = float(input("comprimento do lado c: "))
s = (a1+b+c)/2
a = sqrt(s(s-a1(s-b(s-c))))
print(s)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    a = sqrt(s(s-a1(s-b(s-c))))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:22:36) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
a1 = int(input("comprimento do lado a: "))
b = int(input("comprimento do lado b: "))
c = int(input("comprimento do lado c: "))
s = (a1+b+c)/2
a = sqrt(s(s-a1(s-b(s-c))))
print(s)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    a1 = int(input())
ValueError: invalid literal for int() with base 10: '11.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:25:18) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
x = float(input("comprimento do lado a: "))
y = float(input("comprimento do lado b: "))
z = float(input("comprimento do lado c: "))
s = (x+y+z)/2
a = sqrt(s(s-x(s-y(s-z))))
print(s)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    a = sqrt(s(s-x(s-y(s-z))))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:26:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
x = float(input("comprimento do lado a: "))
y = float(input("comprimento do lado b: "))
z = float(input("comprimento do lado c: "))
s = (x+y+z)/2
a = sqrt(s*(s-x)*(s-y)*(s-z))
print(s)
print(a)
-- OUTPUT:
21.85
69.41967475975385
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:27:35) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
x = float(input("comprimento do lado a: "))
y = float(input("comprimento do lado b: "))
z = float(input("comprimento do lado c: "))
s = (x+y+z)/2
a = sqrt(s*(s-x)*(s-y)*(s-z))
print(s)
print(a)
print(round(a, 3))
-- EXECUTION TIME:
0.171748
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
21.85
69.41967475975385
69.42
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
60.0
600.0
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
65.5
709.1665442616423
709.167
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:28:35) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
x = float(input("comprimento do lado a: "))
y = float(input("comprimento do lado b: "))
z = float(input("comprimento do lado c: "))
s = (x+y+z)/2
a = sqrt(s*(s-x)*(s-y)*(s-z))
print(s)
print(a)
print(round(a, 5))
-- EXECUTION TIME:
0.148814
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
21.85
69.41967475975385
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
60.0
600.0
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
65.5
709.1665442616423
709.16654
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:29:03) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
x = float(input("comprimento do lado a: "))
y = float(input("comprimento do lado b: "))
z = float(input("comprimento do lado c: "))
s = (x+y+z)/2
a = sqrt(s*(s-x)*(s-y)*(s-z))
print(s)
print(a)
print(round(a, 5))
-- OUTPUT:
21.85
69.41967475975385
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:29:33) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
x = float(input("comprimento do lado a: "))
y = float(input("comprimento do lado b: "))
z = float(input("comprimento do lado c: "))
s = (x+y+z)/2
a = sqrt(s*(s-x)*(s-y)*(s-z))
print(round(a, 5))
-- EXECUTION TIME:
0.202574
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
